--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <link href="%PUBLIC_URL%/assets/css/light-theme.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/assets/css/semi-dark.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/assets/css/mdb.min.css" rel="stylesheet" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -46,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Experiment React</title>
+    <title>React Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -84,4 +85,5 @@
     <script src="%PUBLIC_URL%/assets/js/pace.min.js"></script>
     <!--app-->
     <script src="%PUBLIC_URL%/assets/js/app.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/mdb.min.js"></script>
 </html>
